skins/laika/src/scss/custom.scss
// This class imports all fonts, variables and overrides
// and adds custom classes on top of that
@import "variables";
@import "fonts";

// Import Bulma's utility mixins
@import "~bulma/sass/utilities/_all";

.is-nowrap-whitespace {
	white-space: nowrap !important;
}

.is-form-input {
	.has-border-rounded {
		background-color: $fun-color-bright;
		border: 1px solid $fun-color-gray-mid;
		border-radius: 2px;
	}

	.select {
		select {
			border-radius: 0;
			width: 300px;
			font-size: 1rem;
			line-height: 40px;
			height: 48px;
		}
		// Buefy has different types of dropdowns with selectors like these
		// This modifies a "normal" selection dropdown list to accommodate for the custom size we apply
		&:not(.is-multiple):not(.is-loading)::after {
			top: 24px;
		}
	}
}

.list-menu {
	min-width: 300px;
	max-width: 340px;
	li {
		height: 54px;
		position: relative;
		&:after {
			content: '';
			position: absolute;
			left: 0;
			bottom: 0;
			width: 100%;
			border-bottom: 1px solid $fun-color-dark-lighter;
		}
		a {
			color: $fun-color-dark-lighter;
			display: block;
			position: relative;
			top:50%;
			transform: translateY(-50%);

			&:hover, &:focus {
				color: $fun-color-dark;
			}
		}
	}
}

.form-caption {
	line-height: 130%;
	max-width: 415px;
}

.is-inline-checkbox {
	position: relative;
	top: 3px;
}

.has-outside-border {
	margin: -10px; /* half of column gap +1 pixel for border */
	padding: 8px; /* add back column gap -1 pixel border */
	@include from($tablet) {
		margin:  1 - $column-gap;
		padding: $column-gap - 1;
	}
	border: solid 2px $fun-color-gray-light-solid;
}

.accordion {
	&-item {
		border: 1px solid $fun-color-bright;
		padding-top: 1rem;
		box-sizing: content-box;
	}
	&-open {
		border: 1px solid $fun-color-gray-light-transparency;
		margin-top: 1rem;
	}
	&-heading {
		border-bottom: 2px solid $fun-color-gray-light-transparency;
		margin-left: 1.1rem;
		cursor: pointer;
	}
	&-content {
		padding-top: 2.8rem;
		padding-right: 0.6rem;
		margin-left: 1.1rem;
	}
	&-title {
		cursor: pointer;
	}
}

.icon-inline {
	display: flex;
	justify-content: space-between;
	flex-wrap: nowrap;
	align-items: center;
}

// No such feature in Bulma as of August 2019, if you see this comment, check if Bulma has adedd this natively
.is-hidden-print {
	@media print {
		display: none !important;
	}
}

// Import Bulma and Buefy styles
@import "~bulma";
@import "~buefy/src/scss/buefy";
@import "~bulma-helpers/sass/helpers/spacing/margin-padding";

.summary-wrapper {
	@include until($widescreen) {
		button.is-main {
			width: 100%;
			margin: 5px 0;
		}
	}
}

.summary-notice {
	color: $fun-color-dark-lighter;
}

@import "overrides";

